--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
-1.14.4
-oot_is_dead_datapack/*
-loot_tables/*
+.vscode
 __pycache__
 
-rand_loot_adv_tree/*
-rand_loot_adv_tree.zip
+*.zip
 
-rand_loot_adv_tree_*
-rand_loot_adv_tree_*.zip
-rlat_*
-rlat_*.zip
+1.14.4
 
-.vscode
-
-test.json
-test.py
-restrictions/*
-randomized/*
-loot_tables_modified/*
+loot_tables
+restrictions
+randomized
